[package]
name = "smolder-tests"
description = "Reusable tests for emulator development"
license = "MIT"
repository = "https://gitlab.com/apbecker/smolder-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
